sort.dutchflag.DutchFlagAlgo.scala.error
Erreur de compilation :
DutchFlagAlgo:17: error: not found: value term
    } while (term == false)
             ^